[gd_scene load_steps=15 format=3 uid="uid://b1rx666175ev5"]

[ext_resource type="Script" path="res://scripts/door.gd" id="1_xy8pc"]
[ext_resource type="Script" path="res://scripts/interaction_area.gd" id="3_0b0mu"]
[ext_resource type="Material" uid="uid://beg5xm87cna7k" path="res://Scenes/highlight.tres" id="3_bngjc"]
[ext_resource type="Texture2D" uid="uid://hrjie143wxi1" path="res://textures/door1.png" id="3_esxk8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3to0k"]
albedo_texture = ExtResource("3_esxk8")
uv1_scale = Vector3(0.985, 0.86, 1)
uv1_offset = Vector3(0.525, 0.475, 0)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="BoxMesh" id="BoxMesh_aghfp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8kvbx"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_o1jlr"]
height = 1.94614
radius = 0.41066

[sub_resource type="Animation" id="Animation_1wnwe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_fkttq"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5708, 0)]
}

[sub_resource type="Animation" id="Animation_ogff8"]
resource_name = "closed_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.5708, 0)]
}

[sub_resource type="Animation" id="Animation_iqflp"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.5708, 0)]
}

[sub_resource type="Animation" id="Animation_pijb0"]
resource_name = "open_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -1.5708, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2e236"]
_data = {
"RESET": SubResource("Animation_1wnwe"),
"closed": SubResource("Animation_fkttq"),
"closed_in": SubResource("Animation_ogff8"),
"open": SubResource("Animation_iqflp"),
"open_in": SubResource("Animation_pijb0")
}

[node name="hinge" type="Node3D" groups=["key_1"]]
transform = Transform3D(1.96, 0, 0, 0, 2.792, 0, 0, 0, 0.195, 0, 1.40507, 0)
script = ExtResource("1_xy8pc")

[node name="test_door" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.51146, 0, 0)
layers = 3
material_override = SubResource("StandardMaterial3D_3to0k")
material_overlay = ExtResource("3_bngjc")
mesh = SubResource("BoxMesh_aghfp")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="test_door"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="test_door/StaticBody3D"]
shape = SubResource("BoxShape3D_8kvbx")

[node name="Area3D" type="Area3D" parent="test_door"]
transform = Transform3D(1.311, 0, 0, 0, 0.564, 0, 0, 0, 11.7, -0.0166083, 0, -0.105277)
collision_layer = 2
collision_mask = 3
script = ExtResource("3_0b0mu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="test_door/Area3D"]
shape = SubResource("CylinderShape3D_o1jlr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2e236")
}

[node name="Timer" type="Timer" parent="AnimationPlayer"]

[node name="Label" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Door"

[connection signal="area_entered" from="test_door/Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="test_door/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="test_door/Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="hasBeenHit" from="test_door/Area3D" to="." method="_on_area_3d_has_been_hit"]
[connection signal="notHit" from="test_door/Area3D" to="." method="_on_area_3d_not_hit"]
[connection signal="timeout" from="AnimationPlayer/Timer" to="." method="_on_timer_timeout"]
